[package]
name = "zeph-channels"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "Multi-channel I/O adapters (CLI, Telegram, Discord, Slack) for Zeph"
readme = "README.md"

[features]
profiling = []
discord = ["dep:tokio-tungstenite", "dep:futures"]
slack = ["dep:axum", "dep:hmac", "dep:sha2", "dep:subtle"]

[dependencies]
axum = { workspace = true, optional = true }
crossterm.workspace = true
futures = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
pulldown-cmark.workspace = true
reqwest = { workspace = true, features = ["rustls", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }
teloxide = { workspace = true, features = ["rustls", "ctrlc_handler", "macros"] }
tokio = { workspace = true, features = ["sync", "rt"] }
tokio-tungstenite = { workspace = true, optional = true, features = ["connect", "rustls-tls-native-roots"] }
tracing.workspace = true
unicode-width.workspace = true
zeph-core.workspace = true
# See https://github.com/bug-ops/zeph (workspace dependencies only contain versions)

[[bench]]
name = "markdown_performance"
harness = false

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tokio-util.workspace = true
wiremock.workspace = true

[lints]
workspace = true
