[package]
name = "zeph-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "Shared utility functions and security primitives for Zeph crates"
readme = "README.md"

[features]
treesitter = [
    "dep:tree-sitter",
    "dep:tree-sitter-go",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-python",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-typescript",
    "dep:tracing",
]

[dependencies]
blake3.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
zeroize = { workspace = true, features = ["alloc", "derive", "serde"] }
tree-sitter = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]

[lints]
workspace = true
