[package]
name = "zeph-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "Shared utility functions and security primitives for Zeph crates"
readme = "README.md"

[features]
jsonschema = ["dep:schemars"]
treesitter = [
    "dep:tree-sitter",
    "dep:tree-sitter-go",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-python",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-typescript",
]

[dependencies]
blake3.workspace = true
cpu-time.workspace = true
metrics.workspace = true
parking_lot.workspace = true
schemars = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tokio-util.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
zeroize = { workspace = true, features = ["alloc", "derive", "serde"] }
tree-sitter = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }

[dev-dependencies]
metrics-util = { workspace = true, features = ["debugging"] }
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
