[package]
name = "zeph-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "Pure-data configuration types for Zeph"
readme = "README.md"

[features]
default = []
guardrail = []
lsp-context = []
compression-guidelines = ["zeph-memory/compression-guidelines"]
experiments = ["dep:ordered-float", "zeph-memory/experiments"]
policy-enforcer = ["zeph-tools/policy-enforcer"]

[dependencies]
dirs.workspace = true
ordered-float = { workspace = true, optional = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
zeph-common.workspace = true
zeph-memory.workspace = true
zeph-mcp.workspace = true
zeph-tools.workspace = true
zeph-llm.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true

[lints]
workspace = true
