[package]
name = "zeph-context"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "Context budget, manager, compaction strategy, and assembler for the Zeph agent"
readme = "README.md"

[dependencies]
blake3.workspace = true
futures.workspace = true
parking_lot.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing.workspace = true
zeph-common.workspace = true
zeph-config.workspace = true
zeph-llm.workspace = true
zeph-memory.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
