[package]
name = "zeph-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/zeph-core"
keywords.workspace = true
categories.workspace = true
description = "Core agent loop, configuration, context builder, metrics, and vault for Zeph"
readme = "README.md"

[features]
default = []
candle = ["zeph-llm/candle"]
compression-guidelines = ["zeph-memory/compression-guidelines"]
cuda = ["zeph-llm/cuda"]
experiments = ["dep:ordered-float", "zeph-memory/experiments"]
guardrail = []
metal = ["zeph-llm/metal"]
lsp-context = []
policy-enforcer = ["zeph-tools/policy-enforcer"]
scheduler = []
context-compression = []

[dependencies]
age.workspace = true
async-trait.workspace = true
base64.workspace = true
blake3.workspace = true
chrono.workspace = true
dirs.workspace = true
futures.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
ordered-float = { workspace = true, optional = true, features = ["serde"] }
rand.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["rustls"] }
rmcp = { workspace = true, features = ["auth"] }
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_norway.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tokio-stream.workspace = true
tokio-util.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
zeph-common.workspace = true
zeph-index.workspace = true
zeph-llm.workspace = true
zeph-memory.workspace = true
zeph-mcp.workspace = true
zeph-skills.workspace = true
zeph-tools.workspace = true
zeroize = { workspace = true, features = ["derive", "serde"] }
# See https://github.com/bug-ops/zeph (workspace dependencies only contain versions)

[[bench]]
name = "context_building"
harness = false

[dev-dependencies]
criterion.workspace = true
rmcp.workspace = true
indoc.workspace = true
insta.workspace = true
proptest.workspace = true
schemars.workspace = true
serial_test.workspace = true
sqlx.workspace = true
tempfile.workspace = true
zeph-llm.workspace = true
zeph-memory.workspace = true

[lints]
workspace = true
