[package]
name = "zeph-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "Core agent loop, configuration, context builder, metrics, and vault for Zeph"
readme = "README.md"

[features]
profiling = ["dep:tracing-subscriber"]
profiling-alloc = ["profiling"]
sysinfo = ["dep:sysinfo"]
task-metrics = ["dep:cpu-time", "dep:metrics"]
default = []
candle = ["zeph-llm/candle"]
classifiers = ["zeph-llm/classifiers", "zeph-sanitizer/classifiers"]
cuda = ["zeph-llm/cuda"]
metal = ["zeph-llm/metal"]
mock = ["zeph-vault/mock"]
scheduler  = []
self-check = []

[dependencies]
base64.workspace = true
blake3.workspace = true
chrono.workspace = true
dirs.workspace = true
futures.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
ordered-float = { workspace = true, features = ["serde"] }
parking_lot.workspace = true
rand.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["rustls"] }
rmcp = { workspace = true, features = ["auth"] }
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_norway.workspace = true
tempfile.workspace = true
zeph-db = { workspace = true, features = ["sqlite"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-stream.workspace = true
tokio-util.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["parking_lot", "registry"], optional = true }
sysinfo = { workspace = true, optional = true }
cpu-time = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
tree-sitter.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
zeph-commands.workspace = true
zeph-common.workspace = true
zeph-config.workspace = true
zeph-context.workspace = true
zeph-vault.workspace = true
zeph-orchestration.workspace = true
zeph-sanitizer.workspace = true
zeph-subagent.workspace = true
zeph-experiments.workspace = true
zeph-index.workspace = true
zeph-llm.workspace = true
zeph-memory.workspace = true
zeph-mcp.workspace = true
zeph-plugins.workspace = true
zeph-skills = { workspace = true, features = ["qdrant"] }
zeph-tools.workspace = true
# See https://github.com/bug-ops/zeph (workspace dependencies only contain versions)

[[bench]]
name = "context_building"
harness = false

[dev-dependencies]
age.workspace = true
criterion.workspace = true
metrics-util = { workspace = true, features = ["debugging"] }
rmcp.workspace = true
indoc.workspace = true
insta.workspace = true
proptest.workspace = true
schemars.workspace = true
serial_test.workspace = true
sqlx.workspace = true
tempfile.workspace = true
tracing-subscriber = { workspace = true, features = ["parking_lot", "registry"] }
zeph-llm = { workspace = true, features = ["testing"] }
zeph-memory = { workspace = true, features = ["testing"] }
zeph-vault = { workspace = true, features = ["mock"] }

[lints]
workspace = true
