[package]
name = "zeph-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "Database abstraction layer for Zeph (SQLite and PostgreSQL backends)"
readme = "README.md"

[features]
# sqlite and postgres are mutually exclusive; when both are enabled, postgres takes priority.
# default = ["sqlite"] ensures standalone `cargo check -p zeph-db` and rust-analyzer work.
# The root workspace Cargo.toml also enables sqlite via its own default feature set.
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
# Enables test utilities and testcontainers for PostgreSQL integration tests.
test-utils = ["dep:testcontainers", "dep:testcontainers-modules", "postgres"]

[dependencies]
# "macros" required for sqlx::migrate! in driver implementations.
sqlx = { workspace = true, features = ["macros", "migrate", "runtime-tokio-rustls"] }
regex = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt"] }
tracing.workspace = true
testcontainers = { workspace = true, optional = true }
testcontainers-modules = { workspace = true, features = ["postgres"], optional = true }

[lints]
workspace = true
