[package]
name = "zeph-experiments"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false
description = "Experiment engine for adaptive agent behavior testing and hyperparameter tuning"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = { version = "0.8", features = ["small_rng"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
futures.workspace = true
ordered-float.workspace = true
schemars.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
zeph-config.workspace = true
zeph-llm.workspace = true
zeph-memory.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
zeph-llm.workspace = true

[features]
default = []
experiments = []
mock = []
