[package]
name = "zeph-experiments"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "Experiment engine for adaptive agent behavior testing and hyperparameter tuning"
readme = "README.md"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
rand.workspace = true
tracing.workspace = true
futures.workspace = true
ordered-float.workspace = true
schemars.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
zeph-common.workspace = true
zeph-config.workspace = true
zeph-llm.workspace = true
zeph-memory.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
zeph-llm.workspace = true

[features]
default = []
mock = []
