[package]
name = "zeph-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/zeph-index"
keywords.workspace = true
categories.workspace = true
description = "AST-based code indexing and semantic retrieval for Zeph"
readme = "README.md"

[dependencies]
blake3.workspace = true
ignore.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = ["macros", "runtime-tokio-rustls", "sqlite"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "rt"] }
tracing.workspace = true
tree-sitter.workspace = true
uuid = { workspace = true, features = ["v4"] }
zeph-common = { workspace = true, features = ["treesitter"] }
zeph-llm.workspace = true
zeph-memory.workspace = true
# See https://github.com/bug-ops/zeph (workspace dependencies only contain versions)

tree-sitter-bash.workspace = true
tree-sitter-go.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-json.workspace = true
tree-sitter-md.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-toml-ng.workspace = true
tree-sitter-typescript.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
