[package]
name = "zeph-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "LLM provider abstraction with Ollama, Claude, OpenAI, and Candle backends"
readme = "README.md"

[features]
profiling = []
candle = ["dep:audioadapter-buffers", "dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:hf-hub", "dep:tokenizers", "dep:symphonia", "dep:rubato"]
classifiers = ["candle", "dep:hex", "dep:sha2"]
cuda = ["candle", "candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
gonka = ["dep:bech32", "dep:k256", "dep:ripemd", "dep:hex", "dep:sha2"]
metal = ["candle", "candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
testing = []

[dependencies]
async-stream.workspace = true
audioadapter-buffers = { workspace = true, optional = true }
bech32 = { workspace = true, optional = true }
base64.workspace = true
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
dirs.workspace = true
eventsource-stream.workspace = true
hex = { workspace = true, optional = true }
k256 = { workspace = true, optional = true, features = ["ecdsa", "std", "sha256"] }
futures.workspace = true
futures-core.workspace = true
hf-hub = { workspace = true, optional = true, features = ["tokio", "rustls-tls", "ureq"] }
ollama-rs = { workspace = true, features = ["rustls", "stream"] }
parking_lot.workspace = true
rand.workspace = true
rand_distr.workspace = true
ripemd = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json", "multipart", "rustls", "stream"] }
rubato = { workspace = true, optional = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true, optional = true }
serde_json.workspace = true
symphonia = { workspace = true, optional = true, features = ["mp3", "ogg", "wav", "flac", "pcm"] }
thiserror.workspace = true
tokenizers = { workspace = true, optional = true, features = ["fancy-regex"] }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tokio-stream.workspace = true
tracing.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
zeph-common.workspace = true
zeph-config.workspace = true
# See https://github.com/bug-ops/zeph (workspace dependencies only contain versions)

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
proptest.workspace = true
tempfile.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
wiremock.workspace = true

[[bench]]
name = "candle_inference"
harness = false
required-features = ["candle"]

[[bench]]
name = "classifier"
harness = false
required-features = ["classifiers"]

[lints]
workspace = true
