[package]
name = "zeph-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/zeph-mcp"
keywords.workspace = true
categories.workspace = true
description = "MCP client with multi-server lifecycle and Qdrant tool registry for Zeph"
readme = "README.md"

[features]
default = []
mock = []

[dependencies]
async-trait.workspace = true
blake3.workspace = true
dashmap.workspace = true
glob.workspace = true
http.workspace = true
qdrant-client = { workspace = true, features = ["serde"] }
regex.workspace = true
reqwest = { workspace = true, features = ["rustls", "json"] }
rmcp = { workspace = true, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "auth"] }
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "sync", "time", "rt", "net", "io-util"] }
tracing.workspace = true
url.workspace = true
uuid = { workspace = true, features = ["v5"] }
zeph-llm.workspace = true
zeph-memory.workspace = true
zeph-tools.workspace = true
# See https://github.com/bug-ops/zeph (workspace dependencies only contain versions)

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
