[package]
name = "zeph-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "Semantic memory with SQLite and Qdrant for Zeph agent"
readme = "README.md"

[dependencies]
blake3.workspace = true
bytemuck.workspace = true
chrono = { workspace = true, features = ["std", "clock"] }
dashmap.workspace = true
futures.workspace = true
pdf-extract = { workspace = true, optional = true }
petgraph.workspace = true
qdrant-client = { workspace = true, features = ["serde"] }
regex.workspace = true
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = ["macros", "runtime-tokio-rustls", "sqlite", "migrate"] }
thiserror.workspace = true
tiktoken-rs.workspace = true
tokio = { workspace = true, features = ["rt"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "v5"] }
zeph-common.workspace = true
zeph-llm.workspace = true
# See https://github.com/bug-ops/zeph (workspace dependencies only contain versions)

[features]
default = []
compression-guidelines = []
experiments = []
pdf = ["dep:pdf-extract"]

[[bench]]
name = "token_estimation"
harness = false

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true
testcontainers.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
zeph-llm.workspace = true

[lints]
workspace = true
