[package]
name = "zeph-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
description = "Semantic memory with SQLite and Qdrant for Zeph agent"
readme = "README.md"

[dependencies]
arc-swap.workspace = true
blake3.workspace = true
chrono = { workspace = true, features = ["std", "clock"] }
dashmap.workspace = true
futures.workspace = true
lru.workspace = true
parking_lot.workspace = true
pdf-extract = { workspace = true, optional = true }
petgraph.workspace = true
qdrant-client = { workspace = true, features = ["serde"] }
regex.workspace = true
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
sqlx = { workspace = true, features = ["macros", "runtime-tokio-rustls", "sqlite", "migrate"] } # TODO(#2385-phase3): audit and remove direct sqlx dep once #[derive(sqlx::Type)] is resolved
thiserror.workspace = true
tiktoken-rs.workspace = true
tokio = { workspace = true, features = ["rt"] }
tokio-util = { workspace = true, features = ["rt"] }
toml.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "v5"] }
zeph-common.workspace = true
zeph-config.workspace = true
zeph-db.workspace = true
zeph-llm.workspace = true
# See https://github.com/bug-ops/zeph (workspace dependencies only contain versions)

[features]
profiling = []
default = ["sqlite", "jsonschema"]
jsonschema = ["zeph-common/jsonschema"]
pdf = ["dep:pdf-extract"]
sqlite = ["zeph-db/sqlite"]
postgres = ["zeph-db/postgres"]
testing = ["zeph-llm/testing"]

[[bench]]
name = "token_estimation"
harness = false

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
proptest.workspace = true
tempfile.workspace = true
testcontainers.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml.workspace = true
tracing-test.workspace = true
zeph-llm = { workspace = true, features = ["testing"] }

[lints]
workspace = true
